Bug 1746312 - Return WebGPU errors from RenderBundle creation r=jimb

Differential Revision: https://phabricator.services.mozilla.com/D134986